# cpp_cmake_template

ex1/: CMakeLists.txt  readme.txt
ex1/src/: main.cpp
ex2lib/: CMakeLists.txt  readme.txt
ex2lib/src/: bstrlib.h
ex2link_lib/: CMakeLists.txt  readme.txt
ex2link_lib/src/: main.c
